Closed Bug 302914 Opened 21 years ago Closed 21 years ago

DOMContentLoaded is not dispatched on XUL documents

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

Details

Attachments

(1 file)

nsDocument::EndLoad() dispatches DOMContentLoaded right after calling nsIDocumentObserver::EndLoad(). This doesn't happen in XUL documents. Patch coming.
Attached patch proposed patch — — Splinter Review
Attachment #191179 - Flags: superreview?(jst)
Attachment #191179 - Flags: review?(jst)
Comment on attachment 191179 [details] [diff] [review] proposed patch r+sr=jst
Attachment #191179 - Flags: superreview?(jst)
Attachment #191179 - Flags: superreview+
Attachment #191179 - Flags: review?(jst)
Attachment #191179 - Flags: review+
Attachment #191179 - Flags: approval1.8b4?
Attachment #191179 - Flags: approval1.8b4?
Attachment #191179 - Flags: approval1.8b4?
Attachment #191179 - Flags: approval1.8b4? → approval1.8b4+
Checked in on trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: