Dispatch DOMContentLoaded on XUL Documents. Bug 302914, r+sr=jst, a=benjamin, patch by smaug@welho.com